# nanosql

./: .gitignore  Cargo.toml  README.md  runtests.sh
nanosql/: Cargo.toml
nanosql/examples/: derive.rs  foreign_key.rs  indexes.rs  realistic.rs  unique_and_check.rs
nanosql/src/: conn.rs  error.rs  explain.rs  lib.rs  mime.rs  param.rs  query.rs  row.rs  stmt.rs  table.rs  util.rs
nanosql/tests/: compile_fail.rs  external_types.rs  ignore.rs  result_record.rs
nanosql/tests/compile_fail/: derive_table.rs  expr_check.rs  ignore.rs  validate_ident.rs
nanosql_macros/: Cargo.toml
nanosql_macros/src/: as_sql_ty.rs  from_sql.rs  insert_input.rs  lib.rs  param.rs  result_record.rs  table.rs  to_sql.rs  util.rs
