[package]
name = "nanosql"
version = "0.6.0"
edition = "2021"
authors = ["Arpad Goretity 'H2CO3' <arpad.goretity@gmail.com>"]
description = "Tiny, strongly-typed data mapper for SQLite"
license = "MIT"
documentation = "https://docs.rs/nanosql"
homepage = "https://github.com/H2CO3/nanosql"
repository = "https://github.com/H2CO3/nanosql"

[dependencies]
rusqlite = { version = "0.32.1", features = ["modern_sqlite"] }
thiserror = "1.0.63"
ordered-float = { version = "4.2.2", optional = true }
chrono = { version = "0.4.38", optional = true }
ptree = { version = "0.5.0", optional = true, default-features = false }
nanosql_macros = { path = "../nanosql_macros", version = "0.6.0", optional = true }

[dev-dependencies]
compiletest_rs = "0.11.0"

[features]
default = ["derive", "expr-check"]
derive = ["dep:nanosql_macros"]
expr-check = ["nanosql_macros/expr-check"]
not-nan = ["dep:ordered-float"]
chrono = ["dep:chrono", "rusqlite/chrono"]
pretty-eqp = ["dep:ptree"]

[[example]]
name = "realistic"
test = true
harness = false

[[example]]
name = "derive"
test = true
harness = false

[[example]]
name = "indexes"
test = true
harness = false

[[example]]
name = "foreign_key"
test = true
harness = false

[[example]]
name = "unique_and_check"
test = true
harness = false
