[package]
name = "nanosql_macros"
version = "0.9.0"
edition = "2021"
authors = ["Arpad Goretity 'H2CO3' <arpad.goretity@gmail.com>"]
description = "Tiny, strongly-typed data mapper for SQLite (procedural macros)"
license = "MIT"
documentation = "https://docs.rs/nanosql"
homepage = "https://github.com/H2CO3/nanosql"
repository = "https://github.com/H2CO3/nanosql"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
syn = "2.0.76"
quote = "1.0.37"
deluxe = "0.5.0"
heck = "0.5.0"
sqlparser = { version = "0.50.0", optional = true }

[features]
expr-check = ["dep:sqlparser"]
