[package]
name = "nanosql_macros"
version = "0.11.0"
edition = "2021"
authors = ["Arpad Goretity 'H2CO3' <arpad.goretity@gmail.com>"]
description = "Tiny, strongly-typed data mapper for SQLite (procedural macros)"
license = "MIT"
documentation = "https://docs.rs/nanosql"
homepage = "https://h2co3.github.io/nanosql"
repository = "https://github.com/H2CO3/nanosql"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
syn = "2.0.117"
quote = "1.0.45"
deluxe = "0.5.0"
heck = "0.5.0"
sqlparser = { version = "0.62.0", optional = true }

[features]
expr-check = ["dep:sqlparser"]
